# evi-open-source-components

./: .gitignore  README.md  evi.postman_collection.json  vc-contract.json  walltid-issue.json  waltid-verify.json
docker-compose/: .env  docker-compose.yaml  ingress.conf
docker-compose/config/: vault.json
docker-compose/walletkit/config/: issuer-config.json  verifier-config.json  wallet-config.json
img/: waltid-based-architecture.drawio
verifier-proxy/: main.py  pyproject.toml
